--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
+    "formidable": "^2.0.1",
     "node-cron": "^3.0.2",
     "twit": "^2.2.11"
   }
