--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.2",
     "node-cron": "^3.0.2",
     "oauth-1.0a": "^2.2.6",
+    "sharp": "^0.31.0",
     "twit": "^2.2.11"
   }
 }
